# oxidized-swarm

./: README.md  main.py  pyproject.toml  swarm.json
configs/: lighthouse_8bs.conf
flasher/: README.md  flash_all.py  pyproject.toml
