[project]
name = "oxidized-swarm"
version = "0.1.0"
description = "Performance stress test for the Rust-based Crazyflie library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cflib @ git+https://github.com/bitcraze/crazyflie-lib-python.git@d8ee90d2ea1c1a18118e61bf6e7d5468289e5b5b",
]
