[project]
name = "oxidized-swarm"
version = "0.1.0"
description = "Performance stress test for the Rust-based Crazyflie library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cflib @ git+https://github.com/bitcraze/crazyflie-lib-python.git@e3ea96c26a7d1a433f689f4a93c357901c5e5286",
]
