[project]
name = "oxidized-swarm"
version = "0.1.0"
description = "Performance stress test for the Rust-based Crazyflie library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cflib @ git+https://github.com/bitcraze/crazyflie-lib-python.git@51d66ade48248cf9319934efcb5b13ea03797167",
]
